<resources>
    <string name="app_name">ZaidAbuShawarib_MT_25S</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">$0.00</string>
    <string name="price">Price:</string>
    <string name="product_description">Product Description goes here</string>
    <string name="description">Description:</string>
    <string name="product_image">Product Image</string>
    <string name="buy_now">Buy Now</string>
</resources>